--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="">
+<body>
     <!--HEADER-->
     <header>
         <!--NAV-->
@@ -175,21 +175,21 @@
                             <ul>
                                 <li class="row">
                                     <div>
-                                        <i class="fa-solid fa-user"></i>
+                                        <i class="fa-solid fa-users"></i>
                                     </div>
-                                    <span>1 utente</span>
+                                    <span>3 o più utenti</span>
                                 </li>
                                 <li class="row">
                                     <div>
                                         <i class="fa-solid fa-folder"></i>
                                     </div>
-                                    <span>5 TB di spazio di archiviazione sicuro</span>
+                                    <span>Tutto lo spazio di cui ha bisogno il tuo team</span>
                                 </li>
                                 <li class="row">
                                     <div>
                                         <i class="fa-solid fa-share-nodes"></i>
                                     </div>
-                                    <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
+                                    <span>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</span>
                                 </li>
                             </ul>
                         </div>
@@ -262,13 +262,13 @@
                                     <div>
                                         <i class="fa-solid fa-folder"></i>
                                     </div>
-                                    <div>5 TB di spazio di archiviazione sicuro</div>
+                                    <div>Soluzioni personalizzabili per la tua azienda</div>
                                 </li>
                                 <li class="row">
                                     <div>
                                         <i class="fa-solid fa-share-nodes"></i>
                                     </div>
-                                    <div>Funzioni di produttività premium e condivisione file semplice e sicura</div>
+                                    <div>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</div>
                                 </li>
                             </ul>
                         </div>
@@ -286,13 +286,19 @@
                                     <div>
                                         <i class="fa-solid fa-check"></i>
                                     </div>
-                                    <div>Invia file fino a 100 GB con Dropbox Transfert</div>
+                                    <div>Cartelle offline su dispositivi mobili</div>
                                 </li>
                                 <li class="row">
                                     <div>
                                         <i class="fa-solid fa-check"></i>
                                     </div>
-                                    <div>Cartelle offline su dispositivi mobili</div>
+                                    <div>Servizio assistenza 24/h</div>
+                                </li>
+                                <li class="row">
+                                    <div>
+                                        <i class="fa-solid fa-check"></i>
+                                    </div>
+                                    <div>Possibilità di personalizzazione totale</div>
                                 </li>
                             </ul>
                         </div>
@@ -300,16 +306,16 @@
                     <!--/COLUMN ARTICLE-->
                 </div>
                 <!--BIG COLUMN-->
-                <div class="col">
+                <div class="col big-col">
                     <header class="row justify-c align-c">
                         <i class="fa-sharp fa-solid fa-building"></i>
                         <span>Team</span>
                     </header>
-                    <article class="row justify-sb">
-                        <div class="w-50">
+                    <article class="row">
+                        <div class="w-70">
                             <h3>Enterprise</h3>
                             <strong>Contatta l'ufficio vendite per i prezzi</strong>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore sint laboriosam sapiente.</p>
+                            <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</p>
                         </div>  
                         <div>
                             <button class="primary">
@@ -341,36 +347,36 @@
         <section class="section-4 small-container">
             <h2>Esegui più operazioni con dropbox business</h2>
             <div class="columns row justify-sb wrap">
-                <div class="w-30">
+                <article class="w-30">
                     <img src="img/business-feature-switching-tools.png" alt="business feature">
                     <h3>Passa di meno da uno strumento all'altro</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ex corporis. Sunt enim doloribus, facere, quasi, omnis fugiat aspernatur assumenda labore minus molestias ut impedit accusantium. Delectus et accusamus libero?</p>
-                </div>
-                <div class="w-30">
+                </article>
+                <article class="w-30">
                     <img src="img/business-feature-send-files-it.png" alt="business feature">
                     <h3>Passa di meno da uno strumento all'altro</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ex corporis. Sunt enim doloribus, facere, quasi, omnis fugiat aspernatur assumenda labore minus molestias ut impedit accusantium. Delectus et accusamus libero?</p>
-                </div>
-                <div class="w-30">
+                </article>
+                <article class="w-30">
                     <img src="img/business-feature-coordinate-it.png" alt="business feature">
                     <h3>Passa di meno da uno strumento all'altro</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ex corporis. Sunt enim doloribus, facere, quasi, omnis fugiat aspernatur assumenda labore minus molestias ut impedit accusantium. Delectus et accusamus libero?</p>
-                </div>
-                <div class="w-30">
+                </article>
+                <article class="w-30">
                     <img src="img/business-feature-integrations-it.png" alt="business feature">
                     <h3>Passa di meno da uno strumento all'altro</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ex corporis. Sunt enim doloribus, facere, quasi, omnis fugiat aspernatur assumenda labore minus molestias ut impedit accusantium. Delectus et accusamus libero?</p>
-                </div>
-                <div class="w-30">
+                </article>
+                <article class="w-30">
                     <img src="img/business-feature-multi-device.png" alt="business feature">
                     <h3>Passa di meno da uno strumento all'altro</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ex corporis. Sunt enim doloribus, facere, quasi, omnis fugiat aspernatur assumenda labore minus molestias ut impedit accusantium. Delectus et accusamus libero?</p>
-                </div>
-                <div class="w-30">
+                </article>
+                <article class="w-30">
                     <img src="img/business-feature-security.png" alt="business feature">
                     <h3>Passa di meno da uno strumento all'altro</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ex corporis. Sunt enim doloribus, facere, quasi, omnis fugiat aspernatur assumenda labore minus molestias ut impedit accusantium. Delectus et accusamus libero?</p>
-                </div>
+                </article>
             </div>
             <div class="team small-container">
                 <div class="w-50">
@@ -433,7 +439,7 @@
                     </div>
                     <div>
                         <button class="secondary">
-                            <a href="#">Inizia la tua prova gratuita</a>
+                            <a href="#" alt="prova gratuita">Inizia la tua prova gratuita</a>
                         </button>
                     </div>
                 </div>
@@ -582,7 +588,7 @@
             <div class="lang">
                 <i class="fa-solid fa-earth-americas"></i>
                 <span>Italiano</span>
-                <a href="#">
+                <a href="#" alt="angle up">
                     <i class="fa-solid fa-angle-up"></i>
                 </a>
             </div>
