--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                         <i class="fa-sharp fa-solid fa-building"></i>
                         <span>Team</span>
                     </header>
-                    <article class="row">
+                    <article class="row justify-sb">
                         <div class="w-70">
                             <h3>Enterprise</h3>
                             <strong>Contatta l'ufficio vendite per i prezzi</strong>
