bonus - hover faq

--- a/index.html
+++ b/index.html
@@ -449,30 +449,39 @@
         <!--SECTION 6-->
         <section class="section-6 small-container">
             <h2>Domande frequenti</h2>
-            <div class="faq w-100">
-                <hr>  
-                <div class="row justify-sb align-c">
-                    <h4>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced</h4>
-                    <div>
+            <ul class="faq-list w-100">
+                <li>
+                    <hr>  
+                    <div class="faq row justify-sb align-c">
+                        <h4>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced</h4>
                         <i class="fa-solid fa-angle-down"></i>
                     </div>
-                </div>
-                <hr>
-                <div class="row justify-sb align-c">
-                    <h4>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced</h4>
-                    <div>
+                    <div class="hidden">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam quam nobis aut. Impedit odio labore earum consequatur laudantium voluptatibus aliquam exercitationem, non rem aliquid mollitia rerum reprehenderit, id fugiat numquam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum neque quibusdam quisquam facere pariatur facilis nobis autem numquam tempore eaque ex eligendi vitae obcaecati in, ipsa nesciunt quod suscipit sequi.</p>
+                    </div>
+                </li>
+                <li>
+                    <hr>
+                    <div class="faq row justify-sb align-c">
+                        <h4>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced</h4>
                         <i class="fa-solid fa-angle-down"></i>
                     </div>
-                </div>
-                <hr>
-                <div class="row justify-sb align-c">
-                    <h4>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced</h4>
-                    <div>
+                    <div class="hidden">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam quam nobis aut. Impedit odio labore earum consequatur laudantium voluptatibus aliquam exercitationem, non rem aliquid mollitia rerum reprehenderit.</p>
+                    </div>
+                </li>
+                <li>
+                    <hr>
+                    <div class="faq row justify-sb align-c">
+                        <h4>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced</h4>
                         <i class="fa-solid fa-angle-down"></i>
                     </div>
-                </div>
+                    <div class="hidden">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam quam nobis aut. Impedit odio labore earum consequatur laudantium voluptatibus aliquam exercitationem, non rem aliquid mollitia rerum reprehenderit, id fugiat numquam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quam nobis aut.</p>
+                    </div>
+                </li>
                 <hr>
-            </div>
+            </ul>
         </section>
         <!--/SECTION 6-->
     </main>
