fix commenti e testi

--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
     <!--/HEADER-->
     <!--MAIN-->
     <main>
-        <!--JUMBOTRON-->
+        <!--SECTION 1 JUMBOTRON-->
         <section class="section-1 w-100 azure">
             <div class="jumbotron big-container">
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
                 <div class="box row">
                     <!--COL-1-->
                     <div class="w-30">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat unde corrupti, nisi voluptate nihil corporis quasi omnis sequi, dolorum dolore iste modi perferendis ullam eaque adipisci placeat quidem ducimus velit. Ullam eaque ducimus velit.</p>
+                        <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
                         <button class="primary">
                             <a href="#" alt="prova gratuita">Inizia la tua prova gratuita</a>
                         </button>
@@ -77,8 +77,8 @@
                 </div>
             </div>
         </section>
-        <!--/JUMBOTRON-->
-        <!--SECTION 2-->
+        <!--/SECTION 1 JUMBOTRON-->
+        <!--SECTION 2 PLANS-->
         <section class="section-2 small-container">
             <h2>Trova il piano business che fa per te</h2>
             <!--RADIO INPUT-->
@@ -274,7 +274,7 @@
                         </div>
                         <div>
                             <button class="primary">
-                                <a href="#" alt="prova gratis">Prova gratis per 30 giorni</a>
+                                <a href="#" alt="prova gratis">Contattaci</a>
                             </button>
                             <div>oppure <a href="#" alt="acquista" class="link-acquista-ora">acquista ora</a></div>
                             <hr class="hr-small">
@@ -328,7 +328,7 @@
             </div>    
             <!--/COLUMNS-->
         </section>
-        <!--/SECTION 2-->
+        <!--/SECTION 2 PLANS-->
         <!--SECTION 3-->
         <section class="section-3 small-container row">
             <div class="w-60">
@@ -336,46 +336,46 @@
             </div>
             <div class="content-box w-40">
                 <h3>Entra in contatto con un partner dropbox</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore est magnam quidem iure ipsa cumque, aut ipsum tempora ad repellat! Voluptatibus quas labore alias asperiores iste ipsa. Vitae, voluptates veritatis.</p>
+                <p>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
                 <button class="secondary">
                     <a href="#" alt="trova un partner">Trova un partner</a>
                 </button>
             </div>
         </section>
         <!--/SECTION 3-->
-        <!--SECTION 4-->
+        <!--SECTION 4 BUSINESS-->
         <section class="section-4 small-container">
             <h2>Esegui più operazioni con dropbox business</h2>
             <div class="columns row justify-sb wrap">
                 <article class="w-30">
                     <img src="img/business-feature-switching-tools.png" alt="business feature">
                     <h3>Passa di meno da uno strumento all'altro</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ex corporis. Sunt enim doloribus, facere, quasi, omnis fugiat aspernatur assumenda labore minus molestias ut impedit accusantium. Delectus et accusamus libero?</p>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                 </article>
                 <article class="w-30">
                     <img src="img/business-feature-send-files-it.png" alt="business feature">
                     <h3>Passa di meno da uno strumento all'altro</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ex corporis. Sunt enim doloribus, facere, quasi, omnis fugiat aspernatur assumenda labore minus molestias ut impedit accusantium. Delectus et accusamus libero?</p>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                 </article>
                 <article class="w-30">
                     <img src="img/business-feature-coordinate-it.png" alt="business feature">
                     <h3>Passa di meno da uno strumento all'altro</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ex corporis. Sunt enim doloribus, facere, quasi, omnis fugiat aspernatur assumenda labore minus molestias ut impedit accusantium. Delectus et accusamus libero?</p>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                 </article>
                 <article class="w-30">
                     <img src="img/business-feature-integrations-it.png" alt="business feature">
                     <h3>Passa di meno da uno strumento all'altro</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ex corporis. Sunt enim doloribus, facere, quasi, omnis fugiat aspernatur assumenda labore minus molestias ut impedit accusantium. Delectus et accusamus libero?</p>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                 </article>
                 <article class="w-30">
                     <img src="img/business-feature-multi-device.png" alt="business feature">
                     <h3>Passa di meno da uno strumento all'altro</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ex corporis. Sunt enim doloribus, facere, quasi, omnis fugiat aspernatur assumenda labore minus molestias ut impedit accusantium. Delectus et accusamus libero?</p>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                 </article>
                 <article class="w-30">
                     <img src="img/business-feature-security.png" alt="business feature">
                     <h3>Passa di meno da uno strumento all'altro</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ex corporis. Sunt enim doloribus, facere, quasi, omnis fugiat aspernatur assumenda labore minus molestias ut impedit accusantium. Delectus et accusamus libero?</p>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                 </article>
             </div>
             <div class="team small-container">
@@ -385,7 +385,7 @@
                 </div>
             </div>
         </section>
-        <!--/SECTION 4-->
+        <!--/SECTION 4 BUSINESS-->
         <!--SECTION 5 PARTNERS-->
         <section class="section-5">
             <div class="partners row">
@@ -411,7 +411,7 @@
                 <div class="square square-center">
                     <img src="img/designit.svg" alt="designit">
                     <hr>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit quas consequuntur dolorum corrupti inventore optio rem rerum saepe fugiat, error dolor voluptatum eveniet quis aut molestias debitis. Cumque, distinctio architecto.</p>
+                    <p>“I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper”.</p>
                     <span>Morten Thomsen, Global IT Lead</span>
                 </div>
                 <!--/SQUARE CENTER-->
@@ -446,7 +446,7 @@
             </div>
         </section>
         <!--/SECTION 5 PARTNERS-->
-        <!--SECTION 6-->
+        <!--SECTION 6 FAQ-->
         <section class="section-6 small-container">
             <h2>Domande frequenti</h2>
             <ul class="faq-list w-100">
@@ -483,7 +483,7 @@
                 <hr>
             </ul>
         </section>
-        <!--/SECTION 6-->
+        <!--/SECTION 6 FAQ-->
     </main>
     <!--/MAIN-->
     <!--FOOTER-->
