fix sintassi html

--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                         <img src="img/lonely_planet.svg" alt="lonely planet">
                     </div>
                     <div class="inner-square justify-c row" id="clear-channel">
-                        <image src="img/clear_channel.svg" alt="clear channel" class="change-color">
+                        <img src="img/clear_channel.svg" alt="clear channel" class="change-color">
                     </div>
                 </div>
                 <!--/SQUARE RIGHT-->
@@ -480,8 +480,8 @@
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam quam nobis aut. Impedit odio labore earum consequatur laudantium voluptatibus aliquam exercitationem, non rem aliquid mollitia rerum reprehenderit, id fugiat numquam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quam nobis aut.</p>
                     </div>
                 </li>
-                <hr>
             </ul>
+            <hr>
         </section>
         <!--/SECTION 6 FAQ-->
     </main>
